--- a/src/ui/internal-audit/src/app/views/private/branch-audit/closing-meeting-minutes/closing-meeting-minutes.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/closing-meeting-minutes/closing-meeting-minutes.component.html
@@ -54,9 +54,9 @@
                       <td>{{ closingMeetingMinute.createdOn  | date:'mediumDate'}}</td>
                       <td class="text-center">
                         <div class="btn-group" role="group" aria-label="Basic example">
-                          <!-- <button type="button" class="btn btn-secondary btnEditColor" (click) = "edit(workpaper.id)">
+                          <button type="button" class="btn btn-secondary btnEditColor" (click) = "edit(closingMeetingMinute.id)">
                             <svg cIcon name="cilPencil" size="md" title="Edit Button icon"></svg>
-                          </button> -->
+                          </button>
                           <button type="button" class="btn btn-danger btnDeleteColor" (click)="delete(closingMeetingMinute.id)">                          
                             <svg cIcon name="cilTrash" size="md" title="Delete Button Icon"></svg>
                           </button>
