Issue create frontend backend

--- a/src/ui/internal-audit/src/app/views/private/branch-audit/new-issue/new-issue.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/new-issue/new-issue.component.html
@@ -1,6 +1,6 @@
-<c-nav variant="tabs">
-    <a [active]="true" [cTabContent]="tabContent" [routerLink] [tabPaneIdx]="0" cNavLink>Issue</a>
-    <a [cTabContent]="tabContent" [routerLink] [tabPaneIdx]="1" cNavLink>Action Plan</a>
+<c-nav variant="tabs" id="tabs">
+    <a [active]="true" id="d1" [cTabContent]="tabContent" [routerLink] [tabPaneIdx]="0" cNavLink>Issue</a>
+    <a [cTabContent]="tabContent" id="d2" [routerLink] [tabPaneIdx]="1" cNavLink>Action Plan</a>
   </c-nav>
 
 <c-col xs="12">
@@ -55,20 +55,52 @@
 
                         <div class="form-floating mb-3">
                           <select aria-label="Floating label select example" cSelect id="auditScheduleId"
-                            formControlName="auditScheduleId" name="auditScheduleId" style="height: 70px;">
+                            formControlName="auditScheduleId" name="auditScheduleId" style="height: 70px;" (change)="onSelectAuditSchedule(auditSchedule.value)" #auditSchedule >
                             <option value="null">Select Schedule</option>
                             <option *ngFor="let schedule of auditSchedules" [value]="schedule.id">
                               {{schedule.scheduleId}}
                             </option>
                           </select>
-                          <label for="auditScheduleId" >Schedule</label>          
+                          <label for="auditScheduleId">Schedule</label>          
                           <div cRow *ngIf="((issueForm.get('auditScheduleId')?.invalid && issueForm.get('auditScheduleId')?.errors)) &&
                             (issueForm.get('auditScheduleId')?.dirty || issueForm.get('auditScheduleId')?.touched)">
                             <small class="text-danger">
                               This field is required.
-                            </small>                                 
+                            </small>
                           </div>
                         </div>
+                        <div class="form-floating mb-3">
+                          <c-multi-select multiple formControlName="branchList" name="branchList" required style="height: 70px;">
+                            <!-- <label for="branches">Branches</label>  -->
+                            <!-- <c-multi-select-option value="null">Select Branch</c-multi-select-option> -->
+                            <c-multi-select-option *ngFor="let branch of auditScheduleBranches" [value]="branch.branch.id" [selected]="isBranchSelected(branch.value)" #branch>
+                              {{branch.branch.branchName}}
+                            </c-multi-select-option>
+                          </c-multi-select>
+                          <label class="multiSelectLabel" for="branch">Branch</label>  
+                          <div cRow *ngIf="issueForm.get('branchList')?.invalid && issueForm.get('branchList')?.errors &&
+                                (issueForm.get('branchList')?.dirty || issueForm.get('branchList')?.touched)">
+                            <small class="text-danger" *ngIf="issueForm.get('branchList').hasError('required')">
+                              This field is required.
+                            </small>
+                          </div>                          
+                        </div>
+
+                        <div class="form-floating mb-3">
+                          <c-multi-select multiple formControlName="issueOwnerList" name="issueOwnerList" required style="height:70px;">
+                            <c-multi-select-option *ngFor="let owner of issueOwnerList" [value]="owner.id" [selected]="isIssueOwnerSelected(owner.value)" #owner>
+                              {{owner.userName}}
+                            </c-multi-select-option>
+                          </c-multi-select>
+                          <label class="multiSelectLabel" for="owner">Issue Owner</label>  
+                          <div cRow *ngIf="issueForm.get('issueOwnerList')?.invalid && issueForm.get('issueOwnerList')?.errors &&
+                                (issueForm.get('issueOwnerList')?.dirty || issueForm.get('issueOwnerList')?.touched)">
+                            <small class="text-danger" *ngIf="issueForm.get('issueOwnerList').hasError('required')">
+                              This field is required.
+                            </small>
+                          </div>                          
+                        </div>
+                        
                         <!-- <div class="form-floating mb-3">
                             <textarea class="form-control" formControlName="description" id="description" placeholder="description"></textarea>
                             <label for="floatingInput">Branches</label>
@@ -227,7 +259,7 @@
                             </div>
                         </div> 
                         <div>
-                          <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmitNewIssue()">
+                          <button cButton class="btn btn-primary btnSaveColor me-1" ng-click="tabs[1].active = true">
                             <svg cIcon name="cilSave" size="md" title="Save Button Icon"></svg> Continue
                           </button>
                           <button cButton class="btn btn-danger btnCancelColor me-1" (click)="onCancelNewIssue()">
@@ -242,23 +274,23 @@
         </div>
       </div>
     </c-tab-pane>
-    <c-tab-pane class="p-3">
+    <c-tab-pane class="p-3" id="d22">
       <div class="animated fadeIn">
         <div class="row">
          <div class="col-lg-12">
-           <div class="card">
+           <div class="card" >
              <div class="card-header"><i class="fa fa-align-justify" ></i> 
                <strong>Action Plan List</strong>
              </div>
-             <div class="card-body">
+             <div class="card-body" >
               <div class="row overflow-auto">
-                <table class="table table-bordered row-border hover datatableStyle" >
+                <table class="table table-bordered row-border hover datatableStyle">
                   <thead >
                     <tr>
                       <th>SL</th>
                       <th>Action Plan ID</th>
                       <th>Management Action Plan</th>
-                      <th>Action Owner</th>
+                      <th class="col-2">Action Owner</th>
                       <th>Action Target Date</th>
                       <th class="col-1 text-center">Actions</th>
                     </tr>
@@ -270,7 +302,7 @@
                       <td><input type="text" class="form-control" id="managementPlan" placeholder="Management Action Plan"  name="{{row.managementPlan}}" #managementPlan [(ngModel)]="row.managementPlan"></td>
                       <td> <!--{{row.owner}} -->
 
-                        <c-multi-select multiple class="form-control" [(ngModel)]="row.owner" name="{{row.owner}}" >
+                        <c-multi-select multiple class="form-control the_dropdown" [(ngModel)]="row.owner" name="{{row.owner}}">
                           <c-multi-select-option *ngFor="let owner of userList" [value]="owner.id">{{owner.userName}}
                           </c-multi-select-option>
                         </c-multi-select>
@@ -303,7 +335,7 @@
                     <svg cIcon name="cilX" size="md" title="Close Button Icon"></svg> Cancel
                   </button>
                 </div>
-                <div>{{actionPlans | json}}</div>
+                <!-- <div>{{actionPlans | json}}</div> -->
 
               </div>
              </div>
