--- a/src/ui/internal-audit/src/app/views/private/branch-audit/schedule-execution/schedule-execution.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/schedule-execution/schedule-execution.component.html
@@ -1,6 +1,6 @@
 
 
- <div class="card">
+<div class="card">
     <div class="card-header">
       <div class="row">
         <div class="col-8 ">
@@ -30,34 +30,33 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
   <div class="card">
     <div class="card-header">
-       <div class="row">
-        
+       <form [formGroup]="auditScheduleExecutionMenuForm">
         <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btnCreateColor" cButton > Information</button>
-            <button type="button" >
-                <select aria-label="Floating label select example" cSelect (change)="changeForm()">
-                    <option value=1>Planning & Scopping</option>
-                    <option value=2>Notification To Auditee</option>
-                  </select>
-            </button>
-            <button type="button" >
-                <select aria-label="Floating label select example" cSelect>
-                    <option value=1>Field Work</option>
-                    <option value=2>Branch Checklist</option>
-                    <option value=3>Work Paper</option>
-                    <option value=4>Closing Meeting Minutes</option>
-                  </select>
-            </button>
+          <button type="button" class="btn btnCreateColor" cButton formControlName="btn_Info"  (click)="gotoView()"> Information</button>
+          <button type="button" >
+              <select aria-label="Floating label select example" formControlName="ddl_1" cSelect (change)="changeDDL_1Form()">
+                  <option value=1>Planning & Scopping</option>
+                  <option value=2>Notification To Auditee</option>
+                </select>
+          </button>
+          <button type="button" >
+              <select aria-label="Floating label select example" cSelect formControlName="ddl_2" (change)="changeDDL_2Form()">
+                  <option value=1>Field Work</option>
+                  <option value=2>Branch Checklist</option>
+                  <option value=3>Work Paper</option>
+                  <option value=4>Closing Meeting Minutes</option>
+                </select>
+          </button>
         </div>
-       </div>
+      </form>
        
     </div>
     <div class="card-body">
         <div *ngIf="auditScheduleExecutionViewSelected">
-            <form [formGroup]="auditScheduleExecutionView">
+            <form [formGroup]="auditScheduleExecutionViewForm">
                 <div class="row m-2">
                     <div class="col-6 ml-2 ">
                       <div class="row">
@@ -127,6 +126,161 @@
                  </div>
                   
             </form>
+        </div>
+        <div *ngIf="notificationToAuditeeSelected">
+          <div class="animated fadeIn">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="card">
+                  <div class="card-header">
+                    <i class="fa fa-align-justify" ></i> Audit Commencement Notification List
+                  </div>
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="row" style="margin: 0 auto;">
+                        <div class="col-md-6 mb-2">
+                          <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor"  cButton>
+                            <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> New
+                          </button> 
+                        </div>
+                        <div class="col-md-6">
+
+                        </div>
+                      </div>
+                    
+                    </div>
+                    <div class="row overflow-auto">
+                        <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover datatableStyle" >
+                          <thead>
+                            <tr>
+                              <th>Received</th>
+                              <th>User Name</th>
+                              <th>Date</th>
+                            </tr>
+                          </thead>
+                          <tbody *ngIf="auditSchedules?.length != 0">
+                            <tr *ngFor="let auditSchedule of auditSchedules">
+                              <td>{{ auditSchedule.teamLeader }}</td>
+                              <td>{{ auditSchedule.auditor }}</td>
+                              <td>{{ auditSchedule.createdOn | date:'medium' }}</td>
+                            </tr>
+                          </tbody>
+                          <tbody *ngIf="auditSchedules?.length == 0">
+                            <tr>
+                              <td colspan="5" class="no-data-available">No data!</td>
+                            </tr>
+                          </tbody>
+                        </table>
+          
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <form [formGroup]="notificationToAuditeeForm">
+            <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
+              <c-modal-header>
+                <h5>Audit Comencement Notification</h5>
+                <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button>
+              </c-modal-header>
+              <c-modal-body>
+                <div class="col-md-12" >
+                  <div class="form-floating">
+                    <input type="text" class="form-control" formControlName="auditId" id="auditId" placeholder="Audit Id">
+                    <label for="floatingInput">Audit Id</label>
+                  </div>
+                   <br>
+                   <c-col xs="12">
+                    <c-card class="mb-4">
+                      <c-card-header>
+                        <strong>Risk Owner(To)</strong>
+                      </c-card-header>
+                      <c-card-body>
+                        <c-row [gutter]="{g: 2}">
+                          <c-col md>
+                            <c-multi-select multiple formControlName="riskOwnerList" name="riskOwnerList" required>
+                              <c-multi-select-option *ngFor="let user of users" [value]="user.id" >{{user.userName}}
+                              </c-multi-select-option>
+                            </c-multi-select>
+                          </c-col>
+                        </c-row>
+                      </c-card-body>
+                    </c-card>
+                  </c-col>
+                <br>
+                <c-col xs="12">
+                  <c-card class="mb-4">
+                    <c-card-header>
+                      <strong>Others(To)</strong>
+                    </c-card-header>
+                    <c-card-body>
+                      <c-row [gutter]="{g: 2}">
+                        <c-col md>
+                          <c-multi-select multiple formControlName="othersList" name="othersList" required>
+                            <c-multi-select-option *ngFor="let user of users" [value]="user.id" >{{user.userName}}
+                            </c-multi-select-option>
+                          </c-multi-select>
+                        </c-col>
+                      </c-row>
+                    </c-card-body>
+                  </c-card>
+                </c-col>
+                <br>
+                <c-col xs="12">
+                  <c-card class="mb-4">
+                    <c-card-header>
+                      <strong>CC</strong>
+                    </c-card-header>
+                    <c-card-body>
+                      <c-row [gutter]="{g: 2}">
+                        <c-col md>
+                          <c-multi-select multiple formControlName="ccList" name="ccList" required>
+                            <c-multi-select-option *ngFor="let user of users" [value]="user.id"  >{{user.userName}}
+                            </c-multi-select-option>
+                          </c-multi-select>
+                        </c-col>
+                      </c-row>
+                    </c-card-body>
+                  </c-card>
+                </c-col>
+                <br>
+                <c-col xs="12">
+                  <c-card class="mb-4">
+                    <c-card-header>
+                      <strong>BCC</strong>
+                    </c-card-header>
+                    <c-card-body>
+                      <c-row [gutter]="{g: 2}">
+                        <c-col md>
+                          <c-multi-select multiple formControlName="bccList" name="bccList" required>
+                            <c-multi-select-option *ngFor="let user of users" [value]="user.id"  >{{user.userName}}
+                            </c-multi-select-option>
+                          </c-multi-select>
+                        </c-col>
+                      </c-row>
+                    </c-card-body>
+                  </c-card>
+                </c-col>   
+                </div>
+              </c-modal-body>
+              <c-modal-footer>
+                <button cButton class="btn btn-primary btnSaveColor me-1"  (click)="onSubmit(verticallyCenteredModal)">
+                  <svg cIcon name="cilSave" size="md" title="Save Button Icon"></svg> Send
+                </button>
+                <button [cModalToggle]="verticallyCenteredModal.id" cButton class="btn btn-danger btnCancelColor me-1">
+                  <svg cIcon name="cilX" size="md" title="Close Button Icon"></svg> Close
+                </button>
+              </c-modal-footer>
+            </c-modal>
+                
+          </form>
+        </div>
+        <div *ngIf="planningAndScopingSelected">
+          <form [formGroup]="planningAndScopingForm">
+              
+                
+          </form>
         </div>
        
     </div>
