issue related table, dto, mapping

--- a/src/ui/internal-audit/src/app/views/private/branch-audit/new-issue/new-issue.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/new-issue/new-issue.component.html
@@ -335,7 +335,7 @@
                     <svg cIcon name="cilX" size="md" title="Close Button Icon"></svg> Cancel
                   </button>
                 </div>
-                <!-- <div>{{actionPlans | json}}</div> -->
+                <div>{{actionPlans | json}}</div>
 
               </div>
              </div>
